@@ -49,11 +49,10 @@ $SED "/warning: line info addresses out of order/d" |
 $SED "/main Warning: due to transparent memory mappings with MAP_STACK/d" |
 $SED "/main --sanity-level=3 and above may give spurious errors./d" |
 
-# Older bash versions print abnormal termination messages on the stderr
-# of the bash process. Newer bash versions redirect such messages properly.
-# Suppress any redirected abnormal termination messages. You can find the
-# complete list of messages in the bash source file siglist.c.
-perl -n -e 'print if !/^(Segmentation fault|Alarm clock|Aborted|Bus error|Killed)( \(core dumped\))?$/' |
+# Filter out abnormal termination messages. Depending on which shell is
+# pointed to by /bin/sh those messages will be written to stderr or not.
+# E.g. dash writes them to stderr, whereas bash does not.
+perl -n -e 'print if !/^(Illegal instruction|Segmentation fault|Alarm clock|Aborted|Bus error|Killed)( \(core dumped\))?$/' |
 
 # Similar as above, but for ksh on Solaris/illumos.
 perl -n -e 'print if !/^(Memory fault|Killed) $/' |
